--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,9 @@ futures-util = "0.3"
 # Time handling
 chrono = { version = "0.4", features = ["serde"] }
 
+# HTTP client for health checks
+reqwest = { version = "0.12.15", features = ["json"] }
+
 # Configuration
 dirs = "5.0"
 
