Improves documentation and configuration examples
This commit enhances the documentation and configuration examples across several files:

- Adds an `enabled` flag to health check configurations, providing more control over health check execution.
- Updates the PMDaemon version in the installation guide.
- Improves the migration guide from PM2, including input validation.
- Updates the Github Actions example to improve reliability and logging.
- Refactors the process rendering logic in the API examples for clarity.
- Adds a file size check to the config loading logic to prevent large files from crashing the application.

--- a/examples/ecosystem.toml
+++ b/examples/ecosystem.toml
@@ -41,8 +41,9 @@ NODE_ENV = "production"
 REDIS_URL = "redis://localhost:6379"
 
 [[apps]]
-name = "static-server"
-script = "python"
-args = ["-m", "http.server", "8080"]
-port = "8080"
-cwd = "/var/www/html"
+ name = "static-server"
+ script = "python"
+instances = 1
+ args = ["-m", "http.server", "8080"]
+ port = "8080"
+ cwd = "/var/www/html"
