Prepare for release
Prepares codebase for release v0.1.2

Sets up CI/CD workflows and documentation for the upcoming release.

This commit introduces:
- CI/CD workflows for automated testing, linting, building, and releasing binaries.
- GitHub Pages deployment for documentation updates.
- Ecosystem configuration file support, enabling management of multiple applications via JSON, YAML, or TOML.
- Cross-platform support, ensuring native functionality on Linux, Windows, and macOS.
- Refactors project structure and dependencies for cross-platform compatibility.

--- a/docs/changelog/authors.yml
+++ b/docs/changelog/authors.yml
@@ -3,3 +3,9 @@ pmdaemon:
   title: PMDaemon Maintainers
   url: https://github.com/entrepeneur4lyf/pmdaemon
   image_url: https://github.com/entrepeneur4lyf.png
+
+shawn:
+  name: Shawn McAllister
+  title: Lead Developer
+  url: https://github.com/entrepeneur4lyf
+  image_url: https://github.com/entrepeneur4lyf.png
