--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "pmdaemon"
 version = "0.1.2"
 edition = "2021"
-description = "A feature-rich PM2 clone in Rust with advanced port management and monitoring capabilities"
+description = "A cross-platform, feature-rich PM2 clone in Rust with advanced port management and monitoring capabilities"
 license = "MIT"
 authors = ["Shawn McAllister <founder@engineered4ai.com>"]
 repository = "https://github.com/entrepeneur4lyf/pmdaemon"
@@ -41,12 +41,10 @@ serde_yaml = "0.9"
 toml = "0.8"
 
 # Process management
-nix = { version = "0.27", features = ["process", "signal"] }
 libc = "0.2"
 
 # System monitoring
 sysinfo = "0.29"
-procfs = "0.16"
 
 # Logging
 tracing = "0.1"
@@ -95,4 +93,7 @@ criterion = { version = "0.5", features = ["html_reports"] }
 pretty_assertions = "1.4"
 rstest = "0.18"
 
+# Platform-specific dependencies
+[target.'cfg(unix)'.dependencies]
+nix = { version = "0.27", features = ["process", "signal"] }
 
