--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ dirs = "5.0"
 # UUID generation
 uuid = { version = "1.0", features = ["serde", "v4"] }
 comfy-table = "7.1.4"
+regex = "1.11.1"
 
 [dev-dependencies]
 # Testing framework
